[tool.poetry]
name = "pyside6-quickstart"
version = "0.1.0"
description = "py cute quick start based on pyside6"
authors = ["reshdesu <mayuresh.kinare@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyside6 = "^6.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
